package fr.ycaby.repaircafe.core.model;

public enum RepairStatus {
    REPAIRED,
    RUBISH,
    ADVICED,
    WILL_COME_BACK,
    UNKNOWN;
}
